[gd_scene load_steps=11 format=2]

[ext_resource path="res://Game/GameScenes/Levels/BlocksLayer.gd" type="Script" id=1]
[ext_resource path="res://Game/GameScenes/Levels/ContextOfLevels.tscn" type="PackedScene" id=2]
[ext_resource path="res://Game/GameScenes/Levels/ActorsLayer.gd" type="Script" id=3]
[ext_resource path="res://Game/GameScenes/Levels/ItemsLayer.gd" type="Script" id=4]
[ext_resource path="res://Game/GameScenes/Levels/Level.gd" type="Script" id=5]
[ext_resource path="res://Game/Assets/Tilesets/InnerWalls.tres" type="TileSet" id=13]
[ext_resource path="res://Game/Assets/Tilesets/Blocks.tres" type="TileSet" id=23]
[ext_resource path="res://Game/Assets/Tilesets/Actors.tres" type="TileSet" id=24]
[ext_resource path="res://Game/Assets/Tilesets/Items.tres" type="TileSet" id=26]

[sub_resource type="GDScript" id=1]
script/source = "extends TileMap

var params:={
	GameEnums.BLOCKS.EXIT:[ [ Vector2(7,0), 2 , \"Exit1\" ], [ Vector2(9,0), 2, \"Exit2\" ] ]
}
"

[node name="LevelDebug" type="Node2D"]
script = ExtResource( 5 )
size = 10

[node name="ContextOfLevels" parent="." instance=ExtResource( 2 )]
pause_mode = 1
debug = false

[node name="InnerWalls" type="TileMap" parent="."]
light_mask = 3
tile_set = ExtResource( 13 )
cell_size = Vector2( 32, 32 )
cell_custom_transform = Transform2D( 32, 0, 0, 32, 0, 0 )
collision_mask = 2
occluder_light_mask = 3
format = 1
tile_data = PoolIntArray( 327688, 1, 0, 393224, 1, 0, 524289, 1, 1, 524290, 1, 1, 524291, 1, 2, 524293, 1, 131072, 524294, 1, 2, 524295, 1, 1 )

[node name="BlocksLayer" type="Node2D" parent="."]
script = ExtResource( 1 )

[node name="BlocksMap" type="TileMap" parent="BlocksLayer"]
position = Vector2( 1, 0 )
tile_set = ExtResource( 23 )
cell_size = Vector2( 32, 32 )
cell_custom_transform = Transform2D( 32, 0, 0, 32, 0, 0 )
format = 1
tile_data = PoolIntArray( 1, 2, 0, 2, 3, 0, 7, 0, 0, 9, 0, 0, 65544, 1, 0, 196611, 2, 0, 196612, 9, 0, 196613, 6, 0, 262148, 7, 0, 262150, 1, 0, 262152, 1, 0, 327683, 4, 0, 327684, 8, 0, 327687, 1, 0, 393219, 1, 0, 458756, 1, 0, 524288, 5, 0, 524292, 5, 0, 524296, 5, 0, 524297, 5, 0, 589828, 1, 0 )
script = SubResource( 1 )

[node name="Debug" type="Position2D" parent="BlocksLayer/BlocksMap"]
position = Vector2( 143, 272 )

[node name="Debug2" type="Position2D" parent="BlocksLayer/BlocksMap"]
position = Vector2( 15, 272 )

[node name="ItemsLayer" type="Node2D" parent="."]
script = ExtResource( 4 )

[node name="ItemsMap" type="TileMap" parent="ItemsLayer"]
tile_set = ExtResource( 26 )
cell_size = Vector2( 32, 32 )
cell_custom_transform = Transform2D( 32, 0, 0, 32, 0, 0 )
format = 1
tile_data = PoolIntArray( 3, 3, 0, 4, 1, 0, 5, 2, 0, 6, 4, 0, 8, 0, 0, 131072, 5, 0, 196608, 5, 0, 262144, 5, 0, 262149, 5, 0, 327680, 5, 0, 589827, 5, 0, 589829, 6, 0 )

[node name="ActorsLayer" type="Node2D" parent="."]
script = ExtResource( 3 )

[node name="ActorsMap" type="TileMap" parent="ActorsLayer"]
tile_set = ExtResource( 24 )
cell_size = Vector2( 32, 32 )
cell_custom_transform = Transform2D( 32, 0, 0, 32, 0, 0 )
format = 1
tile_data = PoolIntArray( 262147, 9, 0, 262151, 8, 0, 262153, 1, 0, 327682, 0, 0, 458755, 4, 0, 589824, 13, 0, 589833, 13, 0 )

[node name="Position1_Right_ACTIVE_Debug" type="Position2D" parent="."]
position = Vector2( 16, 16 )

[node name="Position2_Left_INACTIVE" type="Position2D" parent="."]
position = Vector2( 304, 48 )
